add html structure

--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,43 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>NAMU | ХУДОЖНІЙ МУЗЕЙ</title>
     <link rel="stylesheet" href="./styles/main.scss">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+      crossorigin="anonymous"
+    >
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
-    <script type="text/javascript" src="scripts/main.js"></script>
+  <body class="page__body">
+    <header class="header">
+      
+    </header>
+
+    <nav class="page__menu menu">
+
+    </nav>
+
+    <main class="page__content">
+      <section class="page__section events">
+
+      </section>
+
+      <section class="page__section gallery">
+
+      </section>
+
+      <section class="page__section subscribe">
+
+      </section>
+    </main>
+
+    <footer class="footer">
+
+    </footer>
   </body>
 </html>
