add header/nav/schedule blocks"

--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,130 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+  <head class="page">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Title</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+      crossorigin="true"
+      >
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&display=swap"
+      rel="stylesheet"
+    >
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body class="page__body page__body--with-menu">
+    <header class="header">
+      <div class="container">
+        <div class="header__content">
+          <div class="header__top">
+            <a href="#menu" class="icon icon--menu-opener">
+            </a>
+
+            <a href="#" class="logo">
+              <img
+                src="images/logo.svg"
+                alt="NA MU logo"
+                class="logo__image"
+                >
+            </a>
+          </div>
+
+          <h1 class="header__title">ХУДОЖНІЙ МУЗЕЙ</h1>
+
+          <div class="header__button">
+            <div class="button-tickets">
+              <a
+                class="button-tickets__link"
+                href="https://namu.ua/?fbclid=IwAR0moyO6yU7TwwzSioSLjN0J9izEAH4GChk3isxx8eul9nTR7YeihsxyARc"
+              >
+              квитки
+              </a>
+              <div class="button-tickets__arrow">
+                <img
+                  class="button__tickets__arrow-image"
+                  src="/images/arrow-right.svg"
+                  alt="arrow right"
+                >
+              </div>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </header>
+
+    <nav class="page__menu menu" id="menu">
+      <div class="menu__content">
+        <div class="container">
+          <div class="menu__top">
+            <div class="menu__icon">
+              <a class="icon icon--cross" href="#"></a>
+            </div>
+
+            <ul class="nav">
+              <li
+                class="nav__link"
+                href="https://namu.ua/"
+              >
+              галерея
+              </li>
+
+              <li
+                class="nav__link"
+                href="https://namu.ua/"
+              >
+              про нас
+              </li>
+
+              <li
+                class="nav__link"
+                href="https://namu.ua/"
+              >
+              виставки та події
+              </li>
+
+              <li
+                class="nav__link"
+                href="https://namu.ua/"
+              >
+              контакти
+              </li>
+            </ul>
+          </div>
+          <div class="schedule">
+            <h2 class="schedule__title">графік роботи</h2>
+
+            <p class="schedule__days">
+              <span class="schedule__time">12:00 — 20:00</span>середа
+              <br>
+              <span class="schedule__time">12:00 — 20:00</span>четвер
+              <br>
+              <span class="schedule__time">12:00 — 20:00</span>п’ятниця
+              <br>
+              <span class="schedule__time">11:00 — 19:00</span>субота
+              <br>
+              <span class="schedule__time">11:00 — 19:00</span>неділя
+            </p>
+
+            <p class="schedule__weekends">
+              <span class="schedule__time">Вихідні</span>: понеділок, вівторок
+              <br>
+              Каса припиняє роботу за 1 годину
+              <br>
+              до закриття музею
+            </p>
+
+          </div>
+        </div>
+
+      </div>
+
+      <div class="menu__transparency"></div>
+    </nav>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
