add header text

--- a/src/index.html
+++ b/src/index.html
@@ -12,10 +12,41 @@
       crossorigin="anonymous"
     >
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <link
+      rel="icon"
+      type="image/ico"
+      href="./images/logos/favicon.ico"
+    >
   </head>
   <body class="page__body">
     <header class="header">
-      
+      <div class="header__top-actions">
+        <a href="#menu" class="header__menu-opener icon"></a>
+      </div>
+
+      <div class="header__content">
+        <div class="header__bg">
+          <a href="#" class="header__logo logo">
+            na
+            <br>
+            mu
+          </a>
+        </div>
+
+        <div class="header__tickets">
+          <h1 class="header__page-tittle">
+            художній музей
+          </h1>
+
+          <a class="header__buy-tickets">
+            <div class="header__buy-tittle">
+              квитки
+            </div>
+
+            <div class="header__buy-button button"></div>
+          </a>
+        </div>
+      </div>
     </header>
 
     <nav class="page__menu menu">
