header without menu finished

--- a/src/index.html
+++ b/src/index.html
@@ -19,18 +19,21 @@
   <body class="page__body page__body--with-menu">
     <header class="header">
       <div class="container">
+        <div class="header__background">
+          <a href="#" class="logo header__logo">
+            <img
+              src="images/logo.svg"
+              alt="NA MU logo"
+              class="logo__image"
+              >
+          </a>
+        </div>
         <div class="header__content">
           <div class="header__top">
             <a href="#menu" class="icon icon--menu-opener">
             </a>
 
-            <a href="#" class="logo">
-              <img
-                src="images/logo.svg"
-                alt="NA MU logo"
-                class="logo__image"
-                >
-            </a>
+
           </div>
 
           <h1 class="header__title">ХУДОЖНІЙ МУЗЕЙ</h1>
@@ -59,7 +62,7 @@
 
     <nav class="page__menu menu" id="menu">
       <div class="menu__content">
-        <div class="container">
+        <div class="container menu__container">
           <div class="menu__top">
             <div class="menu__icon">
               <a class="icon icon--cross" href="#"></a>
@@ -95,6 +98,7 @@
               </li>
             </ul>
           </div>
+
           <div class="schedule">
             <h2 class="schedule__title">графік роботи</h2>
 
