menu layout - not finished

--- a/src/index.html
+++ b/src/index.html
@@ -100,19 +100,21 @@
           </div>
 
           <div class="schedule">
-            <h2 class="schedule__title">графік роботи</h2>
+            <div class="schedule__weekdays">
+              <h2 class="schedule__title">графік роботи</h2>
 
-            <p class="schedule__days">
-              <span class="schedule__time">12:00 — 20:00</span>середа
-              <br>
-              <span class="schedule__time">12:00 — 20:00</span>четвер
-              <br>
-              <span class="schedule__time">12:00 — 20:00</span>п’ятниця
-              <br>
-              <span class="schedule__time">11:00 — 19:00</span>субота
-              <br>
-              <span class="schedule__time">11:00 — 19:00</span>неділя
-            </p>
+              <p class="schedule__days">
+                <span class="schedule__time">12:00 — 20:00</span>середа
+                <br>
+                <span class="schedule__time">12:00 — 20:00</span>четвер
+                <br>
+                <span class="schedule__time">12:00 — 20:00</span>п’ятниця
+                <br>
+                <span class="schedule__time">11:00 — 19:00</span>субота
+                <br>
+                <span class="schedule__time">11:00 — 19:00</span>неділя
+              </p>
+            </div>
 
             <p class="schedule__weekends">
               <span class="schedule__time">Вихідні</span>: понеділок, вівторок
