--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,7 @@
             grid__item--tablet-4-5
             grid__item--desktop-6-7"
           >
-            <a href="https://namu.ua/" class="logo logo--header">
+            <a href="https://www.instagram.com/namu.museum/" class="logo logo--header">
               na<br>mu
             </a>
           </div>
@@ -56,7 +56,7 @@
                   квитки
                 </div>
 
-                <a href="#" class="header__tickets-arrow-container">
+                <a href="https://www.instagram.com/namu.museum/" class="header__tickets-arrow-container">
                   <div class="header__tickets-arrow"></div>
                 </a>
               </div>
@@ -66,6 +66,81 @@
           <div class="header__line"></div>
         </div>
       </div>
+    </div>
+
+    <!-- MENU -->
+    <div class="page__menu menu" id="menu">
+      <div class="menu__container">
+        <div class="arc">
+          <div class="menu__content">
+            <div class="menu__left-block">
+              <a href="#" class="menu__icon-block">
+                <!-- ICON-BLOCK -->
+                <div class="icon icon--menu-closer"></div>
+              </a>
+
+              <!-- NAV-BLOCK -->
+              <div class="nav-block">
+                <ul class="nav-block__list">
+                  <div class="nav-block__group">
+                    <li class="nav-block__item">
+                      <a href="#" class="nav-block__link">
+                        Галерея
+                      </a>
+                    </li>
+
+                    <li class="nav-block__item">
+                      <a href="#" class="nav-block__link">
+                        Виставки та події
+                      </a>
+                    </li>
+                  </div>
+
+                  <div class="nav-block__group">
+                    <li class="nav-block__item">
+                      <a href="#" class="nav-block__link">
+                        Про нас
+                      </a>
+                    </li>
+
+                    <li class="nav-block__item">
+                      <a href="#" class="nav-block__link">
+                        Контакти
+                      </a>
+                    </li>
+                  </div>
+                </ul>
+              </div>
+            </div>
+
+            <div class="menu__right-block">
+              <!-- SCHEDULE-BLOCK -->
+              <div class="schedule-block">
+                <div class="schedule-block__title">
+                  Графік роботи
+                </div>
+
+                <div class="schedule-block__container">
+                  <div class="schedule-block__time">
+                    <b>12:00 — 20:00</b> середа<br>
+                    <b>12:00 — 20:00</b> четвер<br>
+                    <b>12:00 — 20:00</b> п’ятниця<br>
+                    <b>11:00 — 19:00</b> субота<br>
+                    <b>11:00 — 19:00</b> неділя<br>
+                  </div>
+
+                  <div class="schedule-block__days">
+                    <b>Вихідні:</b> понеділок, вівторок<br>
+                    Каса припиняє роботу за 1 годину до закриття музею
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="menu__grey-zone"></div>
     </div>
   </body>
 </html>
