add header layout

--- a/src/index.html
+++ b/src/index.html
@@ -35,10 +35,12 @@
 
         <div class="header__tickets">
           <h1 class="header__page-tittle">
-            художній музей
+            художній
+            <br>
+            музей
           </h1>
 
-          <a class="header__buy-tickets">
+          <a href="#" class="header__buy-tickets">
             <div class="header__buy-tittle">
               квитки
             </div>
