bug fix update 3

--- a/src/index.html
+++ b/src/index.html
@@ -71,6 +71,8 @@
         </div>
       </div>
 
+      <div class="menu__background"></div>
+
       <nav class="menu menu__nav" id="menu">
         <div class="container">
           <div class="menu__content">
