--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@
 
           <h1 class="header__title">ХУДОЖНІЙ МУЗЕЙ</h1>
 
-          <div class="header__button">
+          <div class="header__button" href="https://namu.ua/?fbclid=IwAR0moyO6yU7TwwzSioSLjN0J9izEAH4GChk3isxx8eul9nTR7YeihsxyARc">
             <div class="button-tickets">
               <a
                 class="button-tickets__link"
@@ -68,7 +68,7 @@
               <a class="icon icon--cross" href="#"></a>
             </div>
 
-            <ul class="nav">
+            <ul class="nav menu__nav">
               <li
                 class="nav__link"
                 href="https://namu.ua/"
@@ -87,7 +87,9 @@
                 class="nav__link"
                 href="https://namu.ua/"
               >
-              виставки та події
+                виставки та
+                <br>
+                події
               </li>
 
               <li
