add header button

--- a/src/index.html
+++ b/src/index.html
@@ -40,13 +40,13 @@
             музей
           </h1>
 
-          <a href="#" class="header__buy-tickets">
-            <div class="header__buy-tittle">
+          <div class="header__buy-tickets">
+            <a href="#" class="header__buy-tittle">
               квитки
-            </div>
+            </a>
 
-            <div class="header__buy-button button"></div>
-          </a>
+            <a href="#" class="header__buy-button button">&#10095;</a>
+          </div>
         </div>
       </div>
     </header>
