--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <script src="scripts/main.js" defer></script>
   </head>
-  <body class="page__body">
+  <body class="page__body" >
     <header class="header page__header">
       <div class="container">
         <div>
@@ -112,7 +112,7 @@
               </div>
             </ul>
           </nav>
-
+          <div class="menu__line"></div>
           <div class="work-schedule">
             <h2 class="work-schedule__title">
               Графік роботи
@@ -143,5 +143,123 @@
       </div>
     </div>
   </body>
+  <footer class="footer page__footer">
+    <div class="container">
+      <div class="footer__content">
+        <div class="logo__container--footer footer__icons">
+          <a href="#" class="header__logo">
+             NA <br> MU
+          </a>
+          <div class="footer__icon">
+            <a
+              href="https://www.facebook.com/namu.museum/?locale=ru_RU"
+              class="footer__network"
+              target="_blank"
+            >
+              <img
+                src="/images/Facebook.svg"
+                alt="Facebook"
+                class="footer__network--logo">
+            </a>
+
+            <a
+              href="https://www.instagram.com/namu.museum/"
+              class="footer__network"
+              target="_blank"
+            >
+              <img
+                src="/images/instagram.svg"
+                 alt="Instagram"
+                 class="footer__network--logo"
+              >
+            </a>
+          </div>
+        </div>
+
+        <div class="work-schedule footer__work">
+          <h2 class="work-schedule__title--footer">
+          Графік роботи
+          </h2>
+
+          <div class="work-schedule__schedule-container">
+            <div class="work-schedule__schedule--footer">
+              <strong>12:00 — 20:00 </strong> середа
+              <br>
+              <strong>12:00 — 20:00 </strong>  четвер
+              <br>
+              <strong>12:00 — 20:00 </strong>  п’ятниця
+              <br>
+              <strong>11:00 — 19:00</strong> субота
+              <br>
+              <strong>11:00 — 19:00</strong> неділя
+
+              <strong class="work-schedule__schedule--bottom"> Вихідні: </strong> понеділок, вівторок
+              <br>
+            Каса припиняє роботу за 1 годину
+            до закриття музею
+            </div>
+          </div>
+        </div>
+        <div class="footer__contact">
+          <div class="footer__contact--title">
+            Контакти:
+          </div>
+          <a
+            href="https://goo.gl/maps/Lqa4wkuHZiNyqLgh7"
+            target="_blank"
+            class="footer__contacts"
+          >
+          вул. М. Грушевського, 6; Київ, 01001
+          </a>
+          <p>тел. <a href="tel:+38 (044) 278-13-57" class="footer__contacts"> +38 (044) 278-13-57</a></p>
+
+          <p>факс <a href="fax:+38 (044) 278-74-54" class="footer__contacts">+38 (044) 278-74-54</a></p>
+
+          <p> email:
+            <a
+              href="mailto:info@namu.kiev.ua"
+              target="_blank"
+              class="footer__contacts"
+            >
+               info@namu.kiev.ua
+            </a>
+          </p>
+        </div>
+
+        <div class="footer__line">
+          <a class="footer button__up button__up_hide" href="#"> </a>
+        </div>
+        <div class="footer__list-left">
+          <li class="footer__item">
+            <a class="footer__link" href="#gallery">Галерея</a>
+          </li>
+
+          <li class="footer__item ">
+            <a class="footer__link" href="#events">Виставки та події</a>
+          </li>
+        </div>
+
+        <div class="footer__list-right">
+          <li class="footer__item">
+            <a class="footer__link" href="#about-us">Про Нас</a>
+          </li>
+
+          <li class="footer__item">
+            <a class="footer__link" href="#contacts">Контакти</a>
+          </li>
+        </div>
+      </div>
+
+      <div class="footer__copyright">
+        <div class="footer__rights">
+            Copyright © 2019. All Rights Reserved.
+        </div>
+        <div class="footer__design">
+            Designed by Zhyriada Marina
+        </div>
+      </div>
+    </div>
+  </div>
+  </footer>
 </html>
 
