--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
     >
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
-  <body class="page__body page__body--with-menu">
+  <body class="page__body page__body--with-menu" id="#">
     <header class="header">
       <div class="container">
         <div class="header__background">
@@ -32,8 +32,6 @@
           <div class="header__top">
             <a href="#menu" class="icon icon--menu-opener">
             </a>
-
-
           </div>
 
           <h1 class="header__title">ХУДОЖНІЙ МУЗЕЙ</h1>
@@ -56,7 +54,6 @@
             </div>
           </div>
         </div>
-
       </div>
     </header>
 
@@ -133,6 +130,170 @@
 
       <div class="menu__transparency"></div>
     </nav>
+
+    <!-- <div class="footer footer__grid">
+      <div class="element">1</div>
+      <div class="element">2</div>
+      <div class="footer__grid--exp">3</div>
+      <div class="element">4</div>
+      <div class="element">5</div>
+      <div class="footer__grid--exp2">6</div>
+    </div> -->
+
+    <footer class="footer">
+      <div class="container footer__grid">
+        <div class="footer__top footer__grid--top">
+          <a href="#" class="logo">
+            <img
+              src="images/logo.svg"
+              alt="NA MU logo"
+              class="logo__image"
+              >
+          </a>
+
+          <div class="footer__social-networks">
+            <a
+              target="_blank"
+              href="https://www.facebook.com/namu.museum/?locale=uk_UA"
+              class="footer__social-networks-icon">
+              <img
+                src="images/facebook.svg"
+                alt="facebook"
+                class="facebook"
+                >
+            </a>
+
+            <a
+              target="_blank"
+              href="https://www.instagram.com/namu.museum/"
+              class="footer__social-networks-icon">
+              <img
+                src="images/instagram.svg"
+                alt="instagram"
+                class="instagram"
+                >
+            </a>
+          </div>
+
+        </div>
+
+        <div class="footer__info footer__grid--info">
+          <div class="schedule schedule--footer footer__grid--schedule">
+            <div class="schedule__weekdays">
+              <h2 class="schedule__title">графік роботи</h2>
+
+              <ul class="schedule__days">
+                <li>
+                  <strong>12:00 — 20:00</strong> середа
+                </li>
+
+                <li>
+                  <strong>12:00 — 20:00</strong> четвер
+                </li>
+
+                <li>
+                  <strong>12:00 — 20:00</strong> п’ятниця
+                </li>
+
+                <li>
+                  <strong>11:00 — 19:00</strong> субота
+                </li>
+
+                <li>
+                  <strong>11:00 — 19:00</strong> неділя
+                </li>
+              </ul>
+            </div>
+
+            <p class="schedule__weekends">
+              <span class="schedule__time">Вихідні</span>: понеділок, вівторок
+              <br>
+              Каса припиняє роботу за 1 годину
+              <br>
+              до закриття музею
+            </p>
+          </div>
+
+          <div class="footer__contacts ">
+            <h3 class="footer__contacts-title">Контакти:</h3>
+            <p class="footer__contacts-address">
+              <a
+                href="https://goo.gl/maps/VUne3V7jfdBVArJS9"
+                target="_blank"
+                class="footer__contacts-link"
+              >
+                вул. М. Грушевського, 6; Київ, 01001
+              </a>
+              <br>
+              <a
+                class="footer__contacts-link"
+                href="tel:+380442781357"
+              >
+                тел. +38 (044) 278-13-57
+              </a>
+              <br>
+              <a
+                class="footer__contacts-link"
+                href="fax:+380442787454"
+              >
+                факс +38 (044) 278-74-54
+              </a>
+              <br>
+              <a
+                class="footer__contacts-link"
+                href="mailto:info@namu.kiev.ua">
+                e-mail: info@namu.kiev.ua
+              </a>
+            </p>
+          </div>
+        </div>
+
+        <div class="footer__arrow-up">
+          <a
+            href="#"
+          >
+            <img
+              class="footer__arrow-up-icon"
+              src="./images/arrow-up.svg"
+              alt="arrow up"
+            >
+          </a>
+        </div>
+
+        <div class="footer__grid--nav footer__nav">
+          <ul class="nav nav--footer">
+            <li
+              class="nav__link"
+            >
+              <a class="nav__link--footer" href="#gallery">галерея</a>
+            </li>
+
+            <li
+              class="nav__link"
+            >
+              <a class="nav__link--footer" href="#about-us">про нас</a>
+            </li>
+
+            <li
+              class="nav__link"
+            >
+              <a class="nav__link--footer" href="#exhibitions-and-events">виставки та події</a>
+            </li>
+
+            <li
+              class="nav__link"
+            >
+              <a class="nav__link--footer" href="#contacts">контакти</a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="footer__copyright footer__grid--copyright">
+          <p> Designed by Zhyriada Marina</p>
+          <p>Copyright © 2019. All Rights Reserved.</p>
+        </div>
+      </div>
+    </footer>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
