--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
         <div class="header__top-nav__container grid grid--desktop grid--tablet">
           <a
             href="#menu"
-            class="header__top-nav__link grid__item--desktop-1-2 "
+            class="header__top-nav__link grid__item--desktop-1-2"
             title="menu">
             <img
               src="./images/signs/menu.svg"
@@ -133,7 +133,7 @@
           <div class="main__section__item grid__item--desktop-1-7">
             <img src="./images/photos/actual-acts/jdy.svg"
             alt="idy"
-            class="main__section__item__photo">
+            class="main__section__item__photo main__section__item__photo--hover">
           </div>
           <div class="main__description grid__item--desktop-9-12">
             <div class="main__description__act">
@@ -159,7 +159,7 @@
           <div class="main__section__item grid__item--desktop-1-7">
             <img src="./images/photos/actual-acts/Spogady.svg"
               alt="spogady"
-              class="main__section__item__photo">
+              class="main__section__item__photo main__section__item__photo--hover">
           </div>
           <div class="main__description grid__item--desktop-9-12">
             <div class="main__description__act">
