--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,11 @@
   <head class="page">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>NAMU</title>
+    <link
+      rel="icon"
+      href="./images/logo.svg"
+    >
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link
       rel="preconnect"
@@ -17,7 +21,7 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body class="page__body page__body--with-menu" id="#">
-    <header class="header">
+    <header class="page__section header">
       <div class="container">
         <div class="header__background">
           <a href="#" class="logo header__logo">
@@ -130,6 +134,42 @@
 
       <div class="menu__transparency"></div>
     </nav>
+
+    <section class="page__section subscription">
+      <div class="container">
+        <h2 class="subscription__title">Підписка</h2>
+
+        <p class="subscription__description">
+          Бути в курсі всіх актуальних подій та останніх новин.
+        </p>
+
+        <form
+          class="subscription__form"
+          action="/"
+          method="get"
+          id="form"
+        >
+          <label for="email"></label>
+          <input
+            required
+            class="subscription__form-field"
+            placeholder="E-mail"
+            type="email"
+            name="email"
+            id="email"
+          >
+
+          <button class="button-subscription" type="submit">
+            <img
+              src="./images/arrow-right-black.svg"
+              alt="arrow"
+            >
+          </button>
+        </form>
+      </div>
+
+
+    </section>
 
     <footer class="footer">
       <div class="container footer__grid">
