--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,8 @@
   <body class="page">
     <script type="text/javascript" src="scripts/main.js"></script>
 
-    <div class="header">
+    <!-- HEADER -->
+    <div class="header" >
       <div class="header__background-container">
         <div class="header__background-image"></div>
 
@@ -73,65 +74,77 @@
       <div class="menu__container">
         <div class="arc">
           <div class="menu__content">
-            <div class="menu__left-block">
-              <a href="#" class="menu__icon-block">
-                <!-- ICON-BLOCK -->
-                <div class="icon icon--menu-closer"></div>
-              </a>
+            <div class="grid grid--screen">
+              <div class="
+                grid__item--tablet-1-3
+                grid__item--desktop-1-6"
+              >
+                <div class="menu__left-block">
+                  <a href="#" class="menu__icon-block">
+                    <!-- ICON-BLOCK -->
+                    <div class="icon icon--menu-closer"></div>
+                  </a>
 
-              <!-- NAV-BLOCK -->
-              <div class="nav-block">
-                <ul class="nav-block__list">
-                  <div class="nav-block__group">
-                    <li class="nav-block__item">
-                      <a href="#" class="nav-block__link">
-                        Галерея
-                      </a>
-                    </li>
+                  <!-- NAV-BLOCK -->
+                  <div class="nav-block">
+                    <ul class="nav-block__list">
+                      <div class="nav-block__group">
+                        <li class="nav-block__item">
+                          <a href="#" class="nav-block__link">
+                            Галерея
+                          </a>
+                        </li>
 
-                    <li class="nav-block__item">
-                      <a href="#" class="nav-block__link">
-                        Виставки та події
-                      </a>
-                    </li>
+                        <li class="nav-block__item">
+                          <a href="#" class="nav-block__link">
+                            Виставки та події
+                          </a>
+                        </li>
+                      </div>
+
+                      <div class="nav-block__group">
+                        <li class="nav-block__item">
+                          <a href="#" class="nav-block__link">
+                            Про нас
+                          </a>
+                        </li>
+
+                        <li class="nav-block__item">
+                          <a href="#" class="nav-block__link">
+                            Контакти
+                          </a>
+                        </li>
+                      </div>
+                    </ul>
                   </div>
-
-                  <div class="nav-block__group">
-                    <li class="nav-block__item">
-                      <a href="#" class="nav-block__link">
-                        Про нас
-                      </a>
-                    </li>
-
-                    <li class="nav-block__item">
-                      <a href="#" class="nav-block__link">
-                        Контакти
-                      </a>
-                    </li>
-                  </div>
-                </ul>
-              </div>
-            </div>
-
-            <div class="menu__right-block">
-              <!-- SCHEDULE-BLOCK -->
-              <div class="schedule-block">
-                <div class="schedule-block__title">
-                  Графік роботи
                 </div>
+              </div>
 
-                <div class="schedule-block__container">
-                  <div class="schedule-block__time">
-                    <b>12:00 — 20:00</b> середа<br>
-                    <b>12:00 — 20:00</b> четвер<br>
-                    <b>12:00 — 20:00</b> п’ятниця<br>
-                    <b>11:00 — 19:00</b> субота<br>
-                    <b>11:00 — 19:00</b> неділя<br>
-                  </div>
+              <div class="
+                grid__item--tablet-4-6
+                grid__item--desktop-7-12"
+              >
+                <div class="menu__right-block">
+                  <!-- SCHEDULE-BLOCK -->
+                  <div class="schedule-block">
+                    <div class="schedule-block__title">
+                      Графік роботи
+                    </div>
 
-                  <div class="schedule-block__days">
-                    <b>Вихідні:</b> понеділок, вівторок<br>
-                    Каса припиняє роботу за 1 годину до закриття музею
+                    <div class="schedule-block__container">
+                      <div class="schedule-block__time">
+                        <b>12:00 — 20:00</b> середа<br>
+                        <b>12:00 — 20:00</b> четвер<br>
+                        <b>12:00 — 20:00</b> п’ятниця<br>
+                        <b>11:00 — 19:00</b> субота<br>
+                        <b>11:00 — 19:00</b> неділя<br>
+                      </div>
+
+                      <div class="schedule-block__days">
+                        <b>Вихідні:</b> понеділок, вівторок<br>
+                        Каса припиняє роботу за 1 годину до закриття музею
+                      </div>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -141,6 +154,123 @@
       </div>
 
       <div class="menu__grey-zone"></div>
+    </div>
+
+    <!-- FOOTER -->
+    <div class="footer">
+      <div class="arc">
+        <div class="footer__content">
+          <div class="grid grid--screen">
+            <div class="
+              grid__item--tablet-1-1
+              grid__item--desktop-1-1"
+            >
+              <div class="footer__brand">
+                <a href="https://www.instagram.com/namu.museum/" class="logo logo--footer">
+                  na<br>mu
+                </a>
+
+                <div class="footer__social-media">
+                  <a href="#" class="icon icon--facebook"></a>
+                  <a href="#" class="icon icon--instagram"></a>
+                </div>
+              </div>
+            </div>
+
+              <div class="
+                grid__item--tablet-2-5
+                grid__item--desktop-3-6"
+              >
+                <div class="footer__description">
+                  <!-- SCHEDULE-BLOCK -->
+                  <div class="schedule-block schedule-block--footer">
+                    <div class="schedule-block__title">
+                      Графік роботи
+                    </div>
+
+                    <div class="schedule-block__container schedule-block__container--footer">
+                      <div class="schedule-block__time schedule-block__time--footer">
+                        <b>12:00 — 20:00</b> середа<br>
+                        <b>12:00 — 20:00</b> четвер<br>
+                        <b>12:00 — 20:00</b> п’ятниця<br>
+                        <b>11:00 — 19:00</b> субота<br>
+                        <b>11:00 — 19:00</b> неділя<br>
+                        <br>
+                        Вихідні: понеділок, вівторок<br>
+                        Каса припиняє роботу за 1 годину до закриття музею
+                      </div>
+                    </div>
+                  </div>
+
+                  <!-- SCHEDULE-BLOCK -->
+                  <div class="schedule-block schedule-block--footer">
+                    <div class="schedule-block__title">
+                      Контакти
+                    </div>
+
+                    <div class="schedule-block__container schedule-block__container--footer">
+                      <div class="schedule-block__time schedule-block__time--footer">
+                        вул. М. Грушевського, 6; Київ, 01001<br>
+                        тел. +38 (044) 278&#8209;13&#8209;57<br>
+                        факс +38 (044) 278&#8209;74&#8209;54<br>
+                        e-mail: info@namu.kiev.ua
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <div class="
+                grid__item--desktop-7-7"
+              >
+                <div class="footer__line">
+                </div>
+              </div>
+
+              <div class="
+                grid__item--tablet-2-5
+                grid__item--desktop-8-11"
+              >
+                <div class="nav-block nav-block--footer">
+                  <ul class="nav-block__list">
+                    <div class="nav-block__group nav-block__group--footer">
+                      <li class="nav-block__item">
+                        <a href="#" class="nav-block__link nav-block__link--footer">
+                          Галерея
+                        </a>
+                      </li>
+
+                      <li class="nav-block__item">
+                        <a href="#" class="nav-block__link nav-block__link--footer">
+                          Виставки та події
+                        </a>
+                      </li>
+                    </div>
+
+                    <div class="nav-block__group nav-block__group--footer">
+                      <li class="nav-block__item">
+                        <a href="#" class="nav-block__link nav-block__link--footer">
+                          Про нас
+                        </a>
+                      </li>
+
+                      <li class="nav-block__item">
+                        <a href="#" class="nav-block__link nav-block__link--footer">
+                          Контакти
+                        </a>
+                      </li>
+                    </div>
+                  </ul>
+                </div>
+              </div>
+          </div>
+
+          <div class="footer__authors">
+            <div class="footer__authors-description">Designed by Zhyriada Marina</div>
+            <div class="footer__authors-description">Copyright © 2019. All Rights Reserved.</div>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
