--- a/src/index.html
+++ b/src/index.html
@@ -134,6 +134,124 @@
 
       <div class="menu__transparency"></div>
     </nav>
+    <main>
+      <section class="page__section events">
+        <div class="container">
+          <h2 class="events__title">Aктуальні події</h2>
+
+          <div class="events__item">
+            <img
+              class="events__image"
+              src="./images/photos/event-1.png"
+              alt="event 1"
+            >
+            <div class="events__container">
+              <div class="events__info">
+                <p class="events__date-title">виставка</p>
+                <p class="events__date">26.08-29.11.2019</p>
+              </div>
+
+              <h3 class="events__name">Йду і повертаюсь</h3>
+              <p class="events__description">
+                Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+              </p>
+
+            </div>
+
+          </div>
+
+          <div class="events__item">
+            <img
+              class="events__image"
+              src="./images/photos/event-2.png"
+              alt="event 1"
+            >
+            <div class="event__container">
+              <div class="events__info">
+                <p class="events__date-title">виставка</p>
+                <p class="events__date">26.08-29.11.2019</p>
+              </div>
+
+              <h3 class="events__name">І спогади і мрії</h3>
+              <p class="events__description">
+                Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+              </p>
+            </div>
+
+
+          </div>
+        </div>
+      </section>
+
+      <section class="page__section gallery">
+        <div class="container">
+          <h2 class="gallery__title">Галерея</h2>
+          <div class="gallery__photos">
+            <img
+              class="gallery__photo gallery__photo--1"
+              src="./images/photos/1.png"
+              alt="gallery 1"
+              id="ukrainian-woman"
+            >
+
+            <img
+              class="gallery__photo gallery__photo--2"
+              src="./images/photos/2.png"
+              alt="gallery 2"
+            >
+
+            <img
+              class="gallery__photo gallery__photo--3"
+              src="./images/photos/3.png"
+              alt="gallery 3"
+            >
+
+            <img
+              class="gallery__photo gallery__photo--4"
+              src="./images/photos/4.png"
+              alt="gallery 4"
+            >
+          </div>
+
+          <div class="gallery__indicators">
+
+            <img
+              src="./images/ellipse-green.svg"
+              alt="ellipse green"
+            >
+
+            <img
+              src="./images/ellipse-gray.svg"
+              alt="ellipse"
+            >
+
+            <img
+              src="./images/ellipse-gray.svg"
+              alt="ellipse"
+            >
+
+            <img
+              src="./images/ellipse-gray.svg"
+              alt="ellipse"
+            >
+          </div>
+        </div>
+
+      </section>
+
+      <section class="page__section--lection lection">
+        <div class="container">
+          <div class="lection__info">
+            <div class="lection__date-info">
+              <p class="lection__subtitle">лекція</p>
+              <p class="lection__date">26/08/2019 - 11:00</p>
+            </div>
+            <h3 class="lection__name">Від класицизму до романтизму</h3>
+          </div>
+        </div>
+      </section>
+    </main>
+
 
     <section class="page__section subscription">
       <div class="container">
@@ -167,8 +285,6 @@
           </button>
         </form>
       </div>
-
-
     </section>
 
     <footer class="footer">
